Fix overlay on iphone. Fix text select on iphone diff input

--- a/client/source/index.less
+++ b/client/source/index.less
@@ -51,12 +51,3 @@ body {
 .alertState {
     background-color: red;
 }
-
-.noSelect {
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none;
-}
