--- a/client/source/scripts/interfaces/fpa/diffView.less
+++ b/client/source/scripts/interfaces/fpa/diffView.less
@@ -15,6 +15,11 @@
 
     overflow: auto;
 
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none;
 
     .overlay {
