--- a/client/source/scripts/views/overlayView.less
+++ b/client/source/scripts/views/overlayView.less
@@ -64,4 +64,6 @@
     top: 0%;
     width: 100%;
     height: 5%;
+
+    min-height: 40px;
 }
